--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,25 @@ dependencies = [
     "attrdict==2.0.1",
     "dacite==1.8.1",
     "decord==0.6.0",
+    "denoising-diffusion-pytorch>=2.2.5",
     "gym==0.26.2",
     "gym-pusht==0.1.5",
     "hf-transfer==0.1.9",
     "hydra-core==1.3.2",
     "lerobot==0.3.3",
     "numpy>=2.3.3",
+    "numpydantic>=1.6.11",
     "openpyxl==3.1.5",
     "pandas>=2.3.3",
+    "scipy>=1.16.2",
     "seaborn==0.12.0",
     "spikingjelly>=0.0.0.0.14",
     "swig==4.3.1",
+    "tensorboard>=2.20.0",
     "tomli==2.0.1",
     "torch>=2.7.1",
     "torchaudio>=2.7.1",
+    "torchmetrics>=1.8.2",
     "torchvision>=0.22.1",
     "umap-learn==0.5.7",
     "wandb>=0.22.2",
