--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "hf-transfer==0.1.9",
     "hydra-core==1.3.2",
     "lerobot==0.3.3",
+    "ninja>=1.13.0",
     "numpy>=2.3.3",
     "numpydantic>=1.6.11",
     "openpyxl==3.1.5",
@@ -34,3 +35,8 @@ dependencies = [
     "xlsxwriter==3.2.0",
     "zarr==2.12.0",
 ]
+
+
+[[tool.uv.index]]
+name = "tuna"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
